--- a/plantb/package.json
+++ b/plantb/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "feather-icons": "^4.29.0",
+    "firebase": "^9.17.1",
+    "firestore-export-import": "^1.3.5",
     "framer-motion": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
