--- a/plantb/package.json
+++ b/plantb/package.json
@@ -14,6 +14,7 @@
     "feather-icons": "^4.29.0",
     "firebase": "^9.17.1",
     "firestore-export-import": "^1.3.5",
+    "formik": "^2.2.9",
     "framer-motion": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
