--- a/plantb/package.json
+++ b/plantb/package.json
@@ -16,14 +16,15 @@
     "firestore-export-import": "^1.3.5",
     "formik": "^2.2.9",
     "framer-motion": "^8.5.2",
+    "joi": "^17.8.3",
+    "joi-browser": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
