--- a/plantb/package.json
+++ b/plantb/package.json
@@ -17,8 +17,9 @@
     "formik": "^2.2.9",
     "framer-motion": "^8.5.2",
     "joi": "^17.8.3",
-    "joi-browser": "^13.4.0",
+    "joi-phone-number": "^5.1.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.0",
